bugfix: sonarQube issue 해결